Deduplicate code, fix null ptr exc
Reuse code from ancestor class, move shared code into a common method.